--- a/css/hub.css
+++ b/css/hub.css
@@ -60,7 +60,7 @@ text-decoration: none;
 .card-desc {
   font-family: Arial, sans-serif;
   font-size: 16px;
-  color: #222;
+  color: #ffffff;
   margin-top: 10px;
   line-height: 1.4;
   max-width: 90%;
