Atualização nas cores do site

--- a/css/base.css
+++ b/css/base.css
@@ -20,6 +20,6 @@ a { color: inherit; text-decoration: none; }
 
 .section-subtitle {
   font-size: 1.125rem;
-  color: #ffffff;
+  color: #e6e0e0;
   margin-bottom: 3rem;
 }
